--- a/projects/titanic_survival_exploration/titanic_survival_exploration.ipynb
+++ b/projects/titanic_survival_exploration/titanic_survival_exploration.ipynb
@@ -814,6 +814,8 @@
    "metadata": {},
    "source": [
     "**Answer**: 80.92%\n",
+    "use vs.survival_stats to compare different sets of parameters. For a set of n variables, keep the range for n-1 variables the same and change the nth variable to see if it's influencing the survival rate.\n",
+    "Initially I tried Pclass with sex, and then add more variables.\n",
     "features: Pclass, Sex, Age, SibSp, Parch\n",
     "Pclass and Sex have more influence than others."
    ]
